SFDCProject/src/objects/Generation_Assets__c.object
<CustomObject>
    <description>Generation Assets are energy generating facilities owned by SunRun</description>
    <fields>
        <fullName>AB2863_Filed_N_A__c</fullName>
        <description>This field is checked if the AB2863 Filed date is not needed or N/A [Requested in SFDC-674]. Changed to Date field and &quot;UCC Filed&quot; in BSKY-2713.</description>
        <inlineHelpText>This field is populated when AB2863 is filed.</inlineHelpText>
        <label>UCC Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2863_filed__c</fullName>
        <description>Date we filed the memo of 3rd party ownership with the county assessor, only for CA systems</description>
        <label>PUC Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Fee_Eligible__c</fullName>
        <description>Amount to add to the customer&apos;s monthly bill if they have a contract that was created after 7/9/12 and if they have not signed up for recurring payments.</description>
        <label>ACH Fee Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>$5.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACH_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Generation Assets</relationshipLabel>
        <relationshipName>R00N60000001ZOSVEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Insurance_Cost__c</fullName>
        <label>Additional Insurance Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_to_Credit_Memo_Amt__c</fullName>
        <label>Adjustment to Credit Memo Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Term_Years__c</fullName>
        <description>Length of agreement term</description>
        <inlineHelpText>Length of agreement term in years</inlineHelpText>
        <label>Agreement Term (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Indicates the Sun Run Electricity Package selected by the customer</description>
        <inlineHelpText>Indicates the Sun Run Electricity Package selected by the customer</inlineHelpText>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Low Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Power Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Total Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Value Plan (i.e. Golden Ticket)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run Service (Flat-Rate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun-Akeena Livermore Promo &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun-REC Avalon Promo &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun-REC Cambrian SJ Promo &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun-REC Cupertino Discount Program &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run-REC Downtown San Jose Promo &apos;07-&apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun-REC Livermore Promo &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun - REC Monterey Discount Program &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun-REC Santa Ynez Community Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run Service + Pre-pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run Service + Partial Pre-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run Decreasing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Run 2007 Holiday Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun - REC Walnut Creek Discount Program &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Total Solar SREC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Total Solar Prepaid Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Solar Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Solar Low Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Solar Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Power Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA Golden Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA Power Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Monthly_Payment_Escalator__c</fullName>
        <description>The escalation rate for monthly payments. Currently only applies to lease agreements.</description>
        <inlineHelpText>The escalation rate for monthly payments. Currently only applies to lease agreements.</inlineHelpText>
        <label>Annual Monthly Payment Escalator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approx_Price_Watt_DC__c</fullName>
        <formula>(Customer_Origination_Fee_1__c + Customer_Origination_Fee_Part_2__c + EPC_Price__c)  /  (System_Size_DC__c  * 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approx Price/Watt DC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approx_Price_Watt__c</fullName>
        <formula>(Customer_Origination_Fee_1__c + Customer_Origination_Fee_Part_2__c + EPC_Price__c)  /  (System_Size_CEC_AC__c * 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System cost/CEC AC</inlineHelpText>
        <label>Approx Price/Watt AC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <inlineHelpText>What is the status of this project?</inlineHelpText>
        <label>Asset Status</label>
        <picklist>
            <picklistValues>
                <fullName>01. Deal Signed, Welcome Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02. Site Survey Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02. Welcome Call Complete, Awaiting Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03. Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04. Design True Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. Awaiting CAP and NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. Awaiting Plans, CAP and NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. CAP granted, Awaiting NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. NTP granted, Awaiting CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. Plans approved, Awaiting CAP &amp; NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05a. NTP granted, Awaiting M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06. NTP Granted, In Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07. Install Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08. M1 received, Awaiting M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09. M2 received, Awaiting PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. PTO Granted, Facility Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed - Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed - Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Cust Signoff on Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Change Order Docs from Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting CAP and NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP granted, awaiting NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Purchased System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Cancelled due to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Not Signed, Approved with stipulation (ACH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal not signed, awaiting complete docs from partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Not Signed, Awaiting Credit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Not Signed, Back to Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Tax_Type__c</fullName>
        <description>This field is reserved by the billing system for future audit purposes. If you believe that this customer may not fall into the category of &apos;homeowner&apos;, please change this field&apos;s value accordingly.</description>
        <inlineHelpText>This field is reserved by the billing system for future audit purposes. If you believe that this customer may not fall into the category of &apos;homeowner&apos;, please change this field&apos;s value accordingly.</inlineHelpText>
        <label>Asset Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Homeowner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-profit: Trinity Church program I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Electric_Bill__c</fullName>
        <inlineHelpText>Enter the customer&apos;s average pre-SunRun electric bill off of the initial proposal</inlineHelpText>
        <label>Avg Monthly Electric Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Electricity_Usage__c</fullName>
        <inlineHelpText>Enter the customer&apos;s average monthly pre-SunRun usage off of the proposal</inlineHelpText>
        <label>Avg Monthly Electricity Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Acct__c</fullName>
        <label>Bank Acct</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Lease_Payment_Amount__c</fullName>
        <description>The base payment made for leases before any escalator is applied</description>
        <inlineHelpText>The base payment made for leases before any escalator is applied</inlineHelpText>
        <label>Base Lease Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <description>Time the customer has said is the most likely time to reach them</description>
        <label>Best Time to Call</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Aggregator_Account_Number__c</fullName>
        <description>Account number of the bill aggregator</description>
        <inlineHelpText>Account number of the bill aggregator (necessary if you select the &quot;3rd Party&quot; Billing Type)</inlineHelpText>
        <label>Bill Aggregator Account #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <picklist>
            <controllingField>Agreement_Type__c</controllingField>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay by Check</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Upfront</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Notification_Preference__c</fullName>
        <label>Billing Notification Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paper &amp; Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed monthly PPA with annual reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Upfront</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Build_able_as_Sold__c</fullName>
        <label>Build-able as Sold?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Builder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buyout_per_Watt__c</fullName>
        <description>The buyout per watt.</description>
        <inlineHelpText>The buyout per watt.</inlineHelpText>
        <label>Buyout per Watt</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAP_Status__c</fullName>
        <description>(Requested in JIRA ticket SFDC-30)</description>
        <label>CAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 1x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 2x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 3x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 4x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 5x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call 6x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1 - Call/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 2 - Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 5 - Call/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 6 - Called Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAP_date_approved__c</fullName>
        <description>Project Coordinator field: Date customer approval of plans is approved.</description>
        <label>CAP date approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>[Requested in SFDC-676]</description>
        <inlineHelpText>[Requested in SFDC-676]</inlineHelpText>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Roof for Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided to Purchase System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Renovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing/Savings Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpermitted Structures on Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Denied Interconnection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Credit_Memo_Date_Applied__c</fullName>
        <label>Cash Grant Credit Memo Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Credit_Memo_amt_Applied__c</fullName>
        <label>Cash Grant Credit Memo Amt Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Grant Pre-Buy Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Panel_Price_per_Watt__c</fullName>
        <label>Cash Grant Panel Price per Watt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Grant_Panel_Taxable_Price_per_Watt__c</fullName>
        <label>Cash Grant Panel Taxable Price per Watt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>[SFDC-84] - Requested by Ryan Harris
Used for Oracle/ERP</description>
        <inlineHelpText>Set via a workflow rule</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Value</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_State_County__c</fullName>
        <formula>City__c + &quot; &quot;+ State__c + &quot; &quot; + County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City_State_County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City where home is located</description>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collar_Serial_Num2__c</fullName>
        <inlineHelpText>Serial number on the 2nd collar if the installation has 2 meters</inlineHelpText>
        <label>Collar Serial Num2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collar_Serial_Num__c</fullName>
        <label>Collar Serial Num</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commencement_of_Construction__c</fullName>
        <description>[Requested in SFDC-561]</description>
        <inlineHelpText>Renamed from &quot;CAP Appointment&quot; 2012.10.16</inlineHelpText>
        <label>Commencement of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Community</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Deal_Received__c</fullName>
        <description>Date on which we received all documents required to approve the deal</description>
        <inlineHelpText>Date on which we received all documents required to approve the deal</inlineHelpText>
        <label>Complete Deal Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_of_Construction__c</fullName>
        <label>Completion of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Costco_Membership_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[SFDC-642] Indicates whether the Costco membership has been paid by Sunrun</description>
        <inlineHelpText>[SFDC-642] Indicates whether the Costco membership has been paid by Sunrun</inlineHelpText>
        <label>Costco Membership Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counterparty__c</fullName>
        <label>Counterparty</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_on_Rebate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Did the partner issue a credit memo covering part of the rebate (e.g. b/c of a rebate drop)?</description>
        <label>Credit Memo on Rebate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_memo_amt_applied__c</fullName>
        <description>Amount applied against the M3 payment</description>
        <label>Credit memo amt applied</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_1_Amount_Paid__c</fullName>
        <description>This fee is paid to selling organizations (eg Solmentum, Pinnacle) for deals</description>
        <label>Cust Origination Fee 1 Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_1_Payment_Date__c</fullName>
        <description>Date that customer origination fee part 1 was paid</description>
        <inlineHelpText>Date that customer origination fee part 1 was paid</inlineHelpText>
        <label>Cust Origination Fee 1 Payment  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_2_Amount_Paid__c</fullName>
        <description>This is a fee paid to selling organizations (eg Solmentum, Pinnacle)</description>
        <label>Cust Origination Fee 2 Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_Origination_Fee_2_Payment_Date__c</fullName>
        <description>Date customer origination fee part 2 was paid</description>
        <inlineHelpText>Date customer origination fee part 2 was paid</inlineHelpText>
        <label>Cust Origination Fee 2 Payment  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Ref_Num__c</fullName>
        <description>Customer number that can be used for outside reference, with partners or customers</description>
        <displayFormat>SRC{YY}{000000}03A</displayFormat>
        <label>Cust Ref Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cust_Signoff_Month__c</fullName>
        <formula>DATE((year( Customer_Signoff__c )),(month( Customer_Signoff__c )),1)</formula>
        <label>Cust Signoff Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Id__c</fullName>
        <formula>Customer_Contact__r.Id</formula>
        <label>Customer Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer contact for this gen asset.</description>
        <inlineHelpText>The customer contact for this gen asset.</inlineHelpText>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Generation Assets</relationshipLabel>
        <relationshipName>Generation_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email_Formula__c</fullName>
        <formula>Customer_Contact__r.Email</formula>
        <label>Customer Email (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Facing_CO__c</fullName>
        <label>Customer Facing CO</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Sent__c</fullName>
        <inlineHelpText>Date we sent the invoice for upfront payment to the customer</inlineHelpText>
        <label>Customer Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Mailing_Address__c</fullName>
        <description>This field was created by DSG purely for searching purposed in the milestone portal, it allows you to search for a project by any portion of the address, including city or zip</description>
        <formula>Home_Address__c + &quot;, &quot; + City__c +&quot;, &quot;+ State__c + &quot;, &quot; + Zip__c</formula>
        <label>Customer Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_Formula__c</fullName>
        <formula>Customer_Contact__r.FirstName  &amp;&quot; &quot;&amp;  Customer_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates the name of the customer from the contact object</inlineHelpText>
        <label>Customer Name (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_1__c</fullName>
        <description>Fee for customers closed by partners like Solmentum</description>
        <formula>CASE(
 Sales_Organization__c ,
&quot;Gen110&quot;,System_Size_DC__c * 250,
&quot;Pinnacle&quot;,System_Size_DC__c * 200,
&quot;Invictus&quot;,System_Size_DC__c * 200,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Origination Fee Part 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_Part_2__c</fullName>
        <formula>System_Size_DC__c  *  Customer_Origination_Fee_Part_2_per_W__c *1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Origination Fee Part 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_Part_2_old__c</fullName>
        <label>Customer Origination Fee Part 2_old</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_Part_2_per_W__c</fullName>
        <label>Customer Origination Fee Part 2 per W</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Formula__c</fullName>
        <formula>Customer_Contact__r.Phone</formula>
        <label>Customer Phone (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <formula>NULLVALUE(Customer_Contact__r.Phone , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signoff__c</fullName>
        <inlineHelpText>Date the customer signed the Residential Agreement</inlineHelpText>
        <label>Customer Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <description>Date the customer cancelled</description>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
</CustomObject>